<resources>
    <string name="app_name">Device Overview</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="battery">Battery</string>
    <string name="audio">Audio</string>
    <string name="sensors">Sensors</string>
    <string name="vibration">Vibration</string>
    <string name="notify">Notification</string>
    <string name="notification">Schedule a notification</string>

    <string-array name="hour_entries">
        <item>0 hours</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
    </string-array>

    <string-array name="minute_entries">
        <item>0 minutes</item>
        <item>1 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
    </string-array>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
