<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_grey600_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_camera_grey600_24dp"
            android:title="@string/camera" />
        <item
            android:id="@+id/nav_battery"
            android:icon="@drawable/ic_battery_grey600_24dp"
            android:title="@string/battery" />
        <item
            android:id="@+id/nav_audio_video"
            android:icon="@drawable/ic_volume_high_grey600_24dp"
            android:title="@string/audio" />
        <item
            android:id="@+id/nav_sensor"
            android:icon="@drawable/ic_leak_grey600_24dp"
            android:title="@string/sensors" />
        <item
            android:id="@+id/nav_vibration"
            android:icon="@drawable/ic_vibrate_grey600_24dp"
            android:title="@string/vibration" />
        <item
            android:id="@+id/nav_notify"
            android:icon="@drawable/ic_bell_grey600_24dp"
            android:title="@string/notify" />
    </group>
</menu>
